<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTodoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_list"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textStyle="bold"
        android:textColor="@color/medium_gray"
        app:layout_constraintTop_toBottomOf="@+id/tvTodoList"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCategories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:id="@+id/tvTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:textStyle="bold"
        android:textColor="@color/medium_gray"
        app:layout_constraintTop_toBottomOf="@+id/rvCategories"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="40dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/medium_gray"
        app:tint="@color/primary"
        android:contentDescription="@string/add_task" />


</androidx.constraintlayout.widget.ConstraintLayout>